--- a/shop/Views/Orders/Index.cshtml
+++ b/shop/Views/Orders/Index.cshtml
@@ -20,6 +20,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Address)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IsCurrent)
+        </th>
         <th></th>
     </tr>
 
@@ -33,6 +36,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Address)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.IsCurrent)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
