--- a/shop/Views/Products/Delete.cshtml
+++ b/shop/Views/Products/Delete.cshtml
@@ -26,6 +26,12 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Count)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Count)
+        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Price)
