--- a/shop/Views/Products/Details.cshtml
+++ b/shop/Views/Products/Details.cshtml
@@ -25,7 +25,12 @@
         <dd>
             @Html.DisplayFor(model => model.Name)
         </dd>
-
+        <dt>
+            @Html.DisplayNameFor(model => model.Count)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Count)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
